--- a/views/participants.ejs
+++ b/views/participants.ejs
@@ -3,6 +3,23 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <% if (background) { %>
+      <style>
+        body::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0.3;
+          z-index: -1;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-image: url('https://media.themoviedb.org/t/p/w1920_and_h800_multi_faces<%= background %>');
+        }
+      </style>
+    <% } %>
   </head>
   <body>
     <h1><%= title %></h1>
