--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,15 +8,29 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <div>
-    <% events.map(event => { %>
+      <% events.map(event => { %>
         <div>
           <span><%= event.title %></span>
           <span><%= event.description %></span>
           <span><%= event.date %></span>
           <a href="/register/<%= event.id %>">Register</a>
           <a href="/participants/<%= event.id %>">View</a>
+          <img src="https://media.themoviedb.org/t/p/w64_and_h64_face<%= event.image %>" />
         </div>
       <% }) %>
+      <div>
+        <% if(page > 1) { %>
+          <a href="/?page=<%= page - 1 %>"><</a>
+        <% } else { %>
+          <span><</span>
+        <% } %>
+        <span><%= page %></span>
+        <% if(page < maxPage) { %>
+          <a href="/?page=<%= page + 1 %>">></a>
+        <% } else { %>
+          <span>></span>
+        <% } %>
+      </div>
     </div>
   </body>
 </html>
