add date field for registrations-per-day chart

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,15 +20,15 @@
       <% }) %>
       <div>
         <% if(page > 1) { %>
-          <a href="/?page=<%= page - 1 %>"><</a>
+          <a href="/?page=<%= page - 1 %>">🠈</a>
         <% } else { %>
-          <span><</span>
+          <span>🠈</span>
         <% } %>
         <span><%= page %></span>
         <% if(page < maxPage) { %>
-          <a href="/?page=<%= page + 1 %>">></a>
+          <a href="/?page=<%= page + 1 %>">🠊</a> 
         <% } else { %>
-          <span>></span>
+          <span>🠊</span>
         <% } %>
       </div>
     </div>
