--- a/views/participants.ejs
+++ b/views/participants.ejs
@@ -29,6 +29,7 @@
         <span><%= event.name %></span>
         <span><%= event.email %></span>
         <span><%= event.date %></span>
+        <span style="color: red"><%= event.registered %></span>
       <% }) %>
     </div>
   </body>
