--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,131 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: #cfe0ec;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+body {
+  width: calc(100% - 100px);
+  margin: 0 auto;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: #333;
+}
+header{
+  display: flex;
+  align-items: center;
+  margin: 3% 0;
+}
+.title{
+  margin-left: 3%;
+}
+.container{
+  display: flex;
+  flex-wrap: wrap;
+}
+.wrapper{
+  width: 24.25%;
+  margin-right: 1%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  border-radius: 10px;
+  margin-bottom: 1%;  
+  background-color: #d9d9d975;
+  padding: 1.5%;
+}
+.wrapper:nth-child(4n){
+  margin-right: 0;
+}
+.wrapper_title{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+.picture{
+  border-radius: 10px;
+}
+h2{
+  width: 80%;
+  margin: 4% 2%;
+}
+.wrapper_date{
+  width: 100%;
+  margin: 5% 0;
+}
+.wrapper_link{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.link{
+  text-decoration: none;
+  color: #333;
+  font-weight: 600;
+}
+.link:hover{
+  text-decoration: underline;
 
-
+}
+.desc{
+  line-height: 1.3rem;
+  -webkit-box-orient: vertical;
+  display: block;
+  display: -webkit-box;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 4;
+  height: 85px;
+  margin: 5% 0;
+}
+.pagination{
+  margin: 1% auto 2%;
+}
+.page{
+  margin: 0 10px;
+}
+footer{
+  font-size: medium;
+  font-weight: 600;
+  float: right;
+  margin-bottom: 1%;
+}
+.reg_title{
+  margin: 5% 0 2% 0;
+  font-size: 2rem;
+  text-align: center;
+}
+.reg_text{
+  font-size: 1.7rem;   
+  text-align: center;
+}
+form{
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  margin: 0 auto;
+}
+label{
+  font-size: 1.2rem;
+}
+input{
+  outline: none;
+}
+.reg_container{
+  margin: 0 auto;
+}
+.reg_input{
+  width: 100%;
+  padding: 1%;
+}
+.input_sub{
+  width: 30%;
+  padding: 2% 2%;
+  background-color: #11a662;
+  border-radius: 5%;
+  margin: 0 auto;
+  border: none;
+  font-weight: 600;
+}
+.input_date{
+  padding: 1%;
+}
