--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Cinema events</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <div>
+    <header>
+      <img src="images/logotype.png" />
+      <h1 class="title">Welcome to Cinema events</h1>
+    </header>
+    <div class="container">
       <% events.map(event => { %>
-        <div>
-          <span><%= event.title %></span>
-          <span><%= event.description %></span>
-          <span><%= event.date %></span>
-          <a href="/register/<%= event.id %>">Register</a>
-          <a href="/participants/<%= event.id %>">View</a>
-          <img src="https://media.themoviedb.org/t/p/w64_and_h64_face<%= event.image %>" />
+        <div class="wrapper">
+          <div class="wrapper_title">
+            <h2><%= event.title %></h2>
+            <img src="https://media.themoviedb.org/t/p/w64_and_h64_face<%= event.image %>" class="picture"/>
+          </div>          
+          <div class="desc"><%= event.description %></div>
+            <div class="wrapper_date"><%= event.date %></div>
+          <div class="wrapper_link">
+            <a href="/register/<%= event.id %>" class="link">Register</a>
+            <a href="/participants/<%= event.id %>" class="link">View</a>
+          </div>
         </div>
       <% }) %>
-      <div>
+      <div class="pagination">
         <% if(page > 1) { %>
           <a href="/?page=<%= page - 1 %>">🠈</a>
         <% } else { %>
           <span>🠈</span>
         <% } %>
-        <span><%= page %></span>
+        <span class="page"><%= page %></span>
         <% if(page < maxPage) { %>
           <a href="/?page=<%= page + 1 %>">🠊</a> 
         <% } else { %>
@@ -32,5 +39,6 @@
         <% } %>
       </div>
     </div>
+    <footer>The site was created by Lyudmila Dyachenko</footer>
   </body>
 </html>
