--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Cinema events</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <% if (background) { %>
       <style>
@@ -22,20 +23,20 @@
       <% } %>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Register</p>
+      <h1 class="reg_title"><%= title %></h1>
+    <p class="reg_text">Event registration</p>
     <form method="POST" action="/register/<%= id %>">
       <label>
         Full name
-        <input name="name" type="text" required />
+        <input name="name" type="text" required class="reg_input"/>
       </label>
       <label>
         Email
-        <input name="email" type="email" required />
+        <input name="email" type="email" required class="reg_input"/>
       </label>
       <label>
         Date of birth
-        <input name="date" type="date" required />
+        <input name="date" type="date" required class="input_date"/>
       </label>
       <span>Where did you hear about this event?</span>
       <label>
@@ -50,7 +51,7 @@
         <input name="where" type="radio" value="myself" required />
         Found myself
       </label>
-      <input type="submit" />
-    </form>
+      <input type="submit" value="Send" class="input_sub"/>
+    </form>   
   </body>
 </html>
