--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,7 @@
       <style>
         body::before {
           content: "";
-          position: absolute;
+          position: fixed;
           top: 0;
           left: 0;
           width: 100%;
