--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,11 @@
       <% } %>
   </head>
   <body>
-      <h1 class="reg_title"><%= title %></h1>
+    <header class="header_container">
+      <img src="images/logotype.png" />
+      <h1 class="title">Cinema events</h1>
+    </header>
+    <h1 class="reg_title"><%= title %></h1>
     <p class="reg_text">Event registration</p>
     <form method="POST" action="/register/<%= id %>">
       <label>
@@ -35,23 +39,26 @@
         <input name="email" type="email" required class="reg_input"/>
       </label>
       <label>
-        Date of birth
+        <p>Date of birth</p>
         <input name="date" type="date" required class="input_date"/>
       </label>
-      <span>Where did you hear about this event?</span>
-      <label>
+      <span class="question_form">
+        Where did you hear about this event?
+      </span>
+      <label class="question">
         <input name="where" type="radio" value="media" required />
         Social media
       </label>
-      <label>
+      <label class="question">
         <input name="where" type="radio" value="friends" required />
         Friends
       </label>
-      <label>
+      <label class="question">
         <input name="where" type="radio" value="myself" required />
         Found myself
       </label>
       <input type="submit" value="Send" class="input_sub"/>
-    </form>   
+    </form>
+    <footer>The site was created by Lyudmila Dyachenko</footer>   
   </body>
 </html>
