--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,12 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box;  
+}
+a{
+  display: block;
+  text-decoration: none;
+  color: #333;
 }
 body {
   width: calc(100% - 100px);
@@ -9,33 +14,54 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: #333;
 }
-header{
+.header_container{
   display: flex;
   align-items: center;
   margin: 3% 0;
   justify-content: space-between;
 }
-.header_container{
+.header_wrapper{
   display: flex;
   align-items: center;
+  width: 70%;
 }
-.search{
+.sort{
   display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 30%;
 }
-.search_img{
-  z-index: 1;
+.sort_text{
+  font-size: 1.3rem;
+  font-weight: 600;
+  margin-right: 3%;
 }
-.search_input{
-  border-top: none;
-  border-right: none;
-  border-left: none;
-  border-bottom: 1px solid black;
+.sort_link{
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 1% 3%;
+}
+.margin{
+  margin-right: 3%;
+}
+.sort_link:hover{
+  background-color: #3f50acab;
+  border: 1px solid #3f50acab;
+}
+.link_text{
+  font-size: 1.1rem;
+}
+.active{
+  background-color: #3F50AC;
+  color: #fff !important;
+  font-weight: 600;
+  border: 1px solid #3F50AC;
 }
 .title{
   margin-left: 3%;
   white-space: nowrap;
 }
-.container{
+.main_container{
   display: flex;
   flex-wrap: wrap;
 }
@@ -59,12 +85,12 @@ header{
   align-items: center;
   width: 100%;
 }
-.picture{
-  border-radius: 10px;
-}
 h2{
   width: 80%;
   margin: 4% 2%;
+}
+.picture{
+  border-radius: 10px;
 }
 .wrapper_date{
   width: 100%;
@@ -76,13 +102,15 @@ h2{
   justify-content: space-between;
 }
 .link{
-  text-decoration: none;
-  color: #333;
-  font-weight: 600;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 2% 5%;
 }
 .link:hover{
-  text-decoration: underline;
-
+  background-color: #3F50AC;
+  border: 1px solid #3F50AC;
+  color: #fff;
+  font-weight: 600;
 }
 .desc{
   line-height: 1.3rem;
@@ -96,16 +124,46 @@ h2{
   margin: 5% 0;
 }
 .pagination{
-  margin: 1% auto 2%;
+  display: flex;
+  align-items: center;
+  margin: 0 auto
+}
+.arrow_prev,
+.arrow_next{
+  border: 1px solid #3F50AC;    
+  padding: 10% 40%;
+  border-radius: 3px;
+  color: #3F50AC;
+}
+.arrow_prev:hover,
+.arrow_next:hover{
+  border: 1px solid #3F50AC;
+  background-color: #3F50AC;
+  color:#fff;
 }
 .page{
-  margin: 0 10px;
+  margin: 0 35%;
+  font-weight: 600;
+  color: #3F50AC;
+  font-size: 1.2rem;
 }
 footer{
   font-size: medium;
   font-weight: 600;
   float: right;
   margin-bottom: 1%;
+}
+body::before{
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  z-index: -1;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .reg_title{
   margin: 5% 0 2% 0;
@@ -140,20 +198,21 @@ input{
 }
 .reg_input{
   width: 100%;
-  padding: 1%;
+  padding: 2%;
   margin: 0.5% 0 2%;
 }
 .input_sub{
   width: 30%;
   padding: 2% 2%;
-  background-color: #11a662;
+  background-color: #3F50AC;
   border-radius: 5%;
   margin: 0 auto;
   border: none;
   font-weight: 600;
+  color: #fff;
 }
 .input_sub:hover{
-  background-color: #11a66294;
+  background-color: #3f50acab;
 }
 .input_date{
   padding: 1%;
