--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,27 +5,15 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <% if (background) { %>
-      <style>
-        body::before {
-          content: "";
-          position: fixed;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          opacity: 0.3;
-          z-index: -1;
-          background-size: cover;
-          background-repeat: no-repeat;
-          background-image: url('https://media.themoviedb.org/t/p/w1920_and_h800_multi_faces<%= background %>');
-        }
-      </style>
-      <% } %>
+      <style>body::before{background-image: url('https://media.themoviedb.org/t/p/w1920_and_h800_multi_faces<%= background %>')}</style>
+    <% } %>
   </head>
   <body>
     <header class="header_container">
-      <img src="images/logotype.png" />
-      <h1 class="title">Cinema events</h1>
+      <div class="header_wrapper">
+        <img src="/images/logotype.png" />
+        <h1 class="title">Cinema events</h1>
+      </div>
     </header>
     <h1 class="reg_title"><%= title %></h1>
     <p class="reg_text">Event registration</p>
