--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,10 +10,10 @@
   </head>
   <body>
     <header class="header_container">
-      <div class="header_wrapper">
+      <a href="/" class="header_wrapper">
         <img src="/images/logotype.png" />
         <h1 class="title">Cinema events</h1>
-      </div>
+      </a>
     </header>
     <h1 class="reg_title"><%= title %></h1>
     <p class="reg_text">Event registration</p>
