--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -225,9 +225,10 @@ input{
 .part_container{
   display: flex;
   flex-wrap: wrap;
+  margin-top: 2%;
 }
 .part_wrapper{    
-  border: 2px solid black;
+  border: 1px solid black;
   width: 24.25%;
   padding: 1%;
   margin-right: 1%;
@@ -241,6 +242,10 @@ input{
 .part_email,
 .part_date{
   margin-bottom: 2%;
+}
+.part_name{
+  text-transform: capitalize;
+  font-weight: 600;
 }
 .part_footer{
   margin-top: 1%;
