--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,7 +61,7 @@ body {
   margin-left: 3%;
   white-space: nowrap;
 }
-.main_container{
+.main_container, .paginator_container{
   display: flex;
   flex-wrap: wrap;
 }
